# parse_qapi

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  serde_parser.rs
tests/: .qapi.json.swp  test.rs
